# fitcode2prompt

./: .env.example  .gitignore  README.md  pyproject.toml
src/fitcode2prompt/: __main__.py  async_processor.py  file_discovery.py  planner.py  shrink_prompts.py  summarizer.py  tokenizer.py
