[project]
name = "fitcode2prompt"
version = "0.1.0"
description = "Fit your codebase into any LLM prompt with intelligent compression and planning"
authors = [{ name = "devtooligan" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
]
dependencies = ["tiktoken>=0.5.0", "litellm>=1.0.0", "python-dotenv>=1.0.0"]

[project.urls]
Repository = "https://github.com/ZeroCoolAILabs/fitcode2prompt"
Issues = "https://github.com/ZeroCoolAILabs/fitcode2prompt/issues"

[project.scripts]
fitcode2prompt = "fitcode2prompt.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.8.0", "mypy>=1.0.0"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
